# mflux

./: CMakeLists.txt  README.md  linux_install_guide.txt
config/: .gitignore  mflux.config.jsonc
dat/: bassai.json  mosq_pub_bassai.txt  sample.mfx
dat/docs/project/: build.md  setup.md
dat/relpkg/: readme.txt  start.sh
scripts/: release.sh
source/: CMakeLists.txt
source/.config/: .gitignore  mflux.config.jsonc
source/apps/: CMakeLists.txt
source/apps/mflux/: CMakeLists.txt  readme.md
source/apps/mflux/config/: app-config.h.in
source/apps/mflux/include/: CMakeLists.txt
source/apps/mflux/include/core/: core.h
source/apps/mflux/include/engine/: engine.h
source/apps/mflux/include/mflux/: CMakeLists.txt  mflux.h
source/apps/mflux/include/unita/: CMakeLists.txt  unita.h
source/apps/mflux/include/unitb/: CMakeLists.txt  unitb.h
source/apps/mflux/src/: CMakeLists.txt  main.cpp
source/apps/mflux/src/core/: core.cpp
source/apps/mflux/src/engine/: engine.cpp
source/apps/mflux/src/mflux/: CMakeLists.txt  mflux.cpp
source/apps/mflux/src/unita/: CMakeLists.txt  unita.cpp
source/apps/mflux/src/unitb/: CMakeLists.txt  unitb.cpp
source/apps/mflux/tests/: CMakeLists.txt  main.test.cpp
source/modules/: CMakeLists.txt
source/modules/configurator/: CMakeLists.txt  readme.md
source/modules/configurator/include/configurator/: configurator.h
source/modules/configurator/src/: configurator.cpp
source/modules/errorcodes/include/errorcodes/: errorcodes.h
source/modules/influx/: CMakeLists.txt  readme.md
source/modules/influx/include/influx/: client.h  message.h
source/modules/influx/src/: client.cpp
source/modules/memdb/: CMakeLists.txt  readme.md
source/modules/memdb/include/memdb/: memdb.h
source/modules/memdb/src/: memdb.cpp
source/modules/memdb/tests/: CMakeLists.txt
source/modules/minix/: CMakeLists.txt  readme.md
source/modules/minix/include/minix/: minix.h
source/modules/minix/src/: minix.cpp
source/modules/minix/src/conv/: converters.cpp  converters.h
source/modules/moda/: CMakeLists.txt
source/modules/moda/include/: CMakeLists.txt
source/modules/moda/include/moda/: moda.h
source/modules/moda/src/: CMakeLists.txt  moda.cpp
source/modules/moda/tests/: CMakeLists.txt  main.test.cpp
source/modules/mqtt/: CMakeLists.txt  readme.md
source/modules/mqtt/include/mqtt/: client.h  message.h  subscription.h
source/modules/mqtt/src/: client.cpp
source/modules/service/: CMakeLists.txt
source/modules/service/include/service/: service.h
source/modules/service/src/: service.cpp
