# The following directory contains all the application projects built in this workspace.
add_subdirectory(apps)

# The following directory contains [self-contained] modules that are used by application projects
# in thie workspace.
add_subdirectory(modules)

# The following directory contains all the self-contained third-party library dependendencies
# that will be used by the application projects or modules in this workspapce.
add_subdirectory(thirdparty)